# animabotics

./: conftest.py  pyproject.toml  requirements.txt
animabotics/: __init__.py  algebra.py  algorithms.py  animation.py  basic_window.py  caching.py  camera.py  canvas.py  color.py  data_structures.py  game.py  game_object.py  matrix.py  metaprogramming.py  polygon.py  probabilities.py  profile.py  scene.py  simplex.py  timing.py  transform.py  transformable.py  utilitypes.py
animabotics/components/: __init__.py  component.py  drawable.py  positionable.py
animabotics/data_structures/: __init__.py  binary_search_tree.py  hash_grid.py  union_find.py
ci/: lint.sh  run-tests.sh
demos/: animation-demo.py  animation_demo.py  camera_demo.py  collision-demo.py  collision_demo.py  time_slicing_demo.py
tests/: algorithms_test.py  animation_test.py  game_object_test.py  matrix_test.py  metaprogramming_test.py  simplex_test.py
tests/animabotics/: algebra_realistic_test.py  algebra_test.py  animation_test.py  basic_window_test.py  caching_test.py  camera_test.py  canvas_test.py  game_object_test.py  game_test.py  hypostrats.py  image_test_utils.py  matrix_test.py  polygon_test.py  probabilities_test.py  scene_test.py  simplex_test.py  timing_test.py  transform_test.py
tests/animabotics/data_structures/: binary_search_tree_test.py  hash_grid_test.py  union_find_test.py
tests/data_structures/: binary_search_tree_test.py  data_structures_test.py  hash_grid_test.py
tests/demos/: animation_demo_test.py  collision_demo_test.py  game_test_utils.py
